--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
                 <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-13">Homework #13</a></h3>
 
-                <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-15">Homework #14(15)</a></h3>
+                <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-15!">Homework #14(15)</a></h3>
 
-                <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-16">Homework #16</a></h3>
+                <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-16!">Homework #16</a></h3>
                                 
-                <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-22">Homework #22</a></h3>
+                <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-22!">Homework #22</a></h3>
 
-                <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-23">Homework #23</a></h3>
+                <h3 class="m-2"><a target=blank href="https://stastikh.github.io/homework/homework-23!">Homework #23</a></h3>
 
             </section>
         </div>
