added correct URL

--- a/homework-23/index.html
+++ b/homework-23/index.html
@@ -23,7 +23,7 @@
             Guess Game</h5>
           <p class="card-text">I've choosed a random number between 1 and 100. Try to guess it maximum in 10 turns. I'll tell you if your guess was too high or too low.</p>
           <a id="openG" onclick="openGame()" class="btn btn-primary">Let's Go!</a>
-          <a href="/russian.html" type="button" class="btn btn-outline-danger mt-3 w-50 m-auto">RU</a>
+          <a href="./russian.html" type="button" class="btn btn-outline-danger mt-3 w-50 m-auto">RU</a>
         </div>
       </div>
     </div>
