again added proper URL

--- a/homework-23/russian.html
+++ b/homework-23/russian.html
@@ -24,7 +24,7 @@
           <p class="card-text text-justify">Я загадал случайное число от 1 до 100. Попробуй угадать его, я даю тебе <span class="text-decoration-underline">10 попыток.</span>  В качестве подсказки, я буду говорить, больше твой ответ загаданного или меньше. </p> 
           <span class="text-center mb-3">Удачи!</span>
           <a id="openG" onclick="openGame()" class="btn btn-primary">Поехали!</a>
-          <a href="/index.html" type="button" class="btn btn-outline-danger mt-3 w-50 m-auto">ENG</a>
+          <a href="./index.html" type="button" class="btn btn-outline-danger mt-3 w-50 m-auto">ENG</a>
         </div>
       </div>
     </div>
