--- a/homework-23/russian.html
+++ b/homework-23/russian.html
@@ -39,9 +39,11 @@
                     Угадайка
             </h1>
     
-        <div class="form-group text-center mb-3">
-            <input type="text" class="form-control text-center mb-1" id="myNum" placeholder="От 1 до 100" oninput="isNumber()">
+        <div onsubmit="isNumber()" class="form-group text-center mb-3">
+          <form id="submitForm" onsubmit="guessGame(); return false"> 
+            <input type="text" class="form-control text-center mb-1" id="myNum" placeholder="От 1 до 100"  oninput="isNumber()">
             <small id="noNum" class="text-danger mb-1"></small>
+          </form> 
         </div>
         <button id="numButton" class="text-center btn btn-primary w-50" onclick="guessGame()">Попробовать!</button>
         <p class="text-center mt-3" id="outAnswer"></p>
