--- a/homework-23/russian.html
+++ b/homework-23/russian.html
@@ -39,7 +39,7 @@
                     Угадайка
             </h1>
     
-        <div onsubmit="isNumber()" class="form-group text-center mb-3">
+        <div class="form-group text-center mb-3">
           <form id="submitForm" onsubmit="guessGame(); return false"> 
             <input type="text" class="form-control text-center mb-1" id="myNum" placeholder="От 1 до 100"  oninput="isNumber()">
             <small id="noNum" class="text-danger mb-1"></small>
