--- a/homework-23/index.html
+++ b/homework-23/index.html
@@ -39,7 +39,7 @@
      
       <div class="col">
         <div class="card shadow p-3 mb-5 bg-body rounded">
-          <img src="/assets/images/dice.jpg" class="card-img-top" alt="...">
+          <img src="./assets/images/dice.jpg" class="card-img-top" alt="...">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title"><i class="fas fa-dice"></i>
               Dice Game</h5>
