исправления недочета попыток и нажатия кнопок при больше 100 и меньше 1

--- a/guessGame/index.html
+++ b/guessGame/index.html
@@ -16,7 +16,7 @@
               </div>
             <div class="card-body text-center">
               <h5 class="card-title">Загадай число!</h5>
-              <p id="winField" class="card-text text-justify">Загадай число от 1 до 100. </br> Я буду угадывать, а ты подсказывай, больше или меньше.</p>
+              <p id="winField" class="card-text text-justify">Загадай целое число от 1 до 100. </br> Я буду угадывать, а ты подсказывай, больше или меньше.</p>
               <a id="btn" class="mb-2 btn btn-primary">Начать</a>
               <div class="buttons1 d-flex text-center justify-content-between">    
                 <a id="small" class="btn btn-warning" style="display: none;">Меньше</a>
