remastered new game

--- a/guessGameAlex/index.html
+++ b/guessGameAlex/index.html
@@ -17,6 +17,7 @@
             <div class="card-body text-center">
               <h5 class="card-title" id="cardTitle">Загадай число!</h5>
               <p id="winField" class="card-text text-justify">Загадай целое число от 1 до любого заданного тобой. </br> Я буду угадывать, а ты подсказывай, больше или меньше.</p>
+              <small style="display: none;" id="moreTry" class="text-danger mt-1 mb-4"></small>
               <div class="form-group text-center mb-3">
                 <form> 
                   <input oninput="isNumber()" type="text" class="form-control text-center mb-1" id="endNum" placeholder="Введите конечное число">
