--- a/guessGame/index.html
+++ b/guessGame/index.html
@@ -19,8 +19,8 @@
           <h5 class="card-title">Загадай число!</h5>
           <p class="card-text text-justify">Загадай целое число от 1 до 100. </br> Я буду угадывать, а ты подсказывай, больше или меньше.</p>
           <div class="buttons1 d-flex text-center justify-content-between">    
-            <a class="btn btn-success" onclick="startGame1()">Manually</a>
-            <a class="btn btn-primary" onclick="startGame2()">Automatic</a>
+            <a class="btn btn-success" onclick="startGame1()">Automatic</a>
+            <a class="btn btn-primary" onclick="startGame2()">Manually</a>
           </div>
           
         </div>
