--- a/j13-hw1/index.html
+++ b/j13-hw1/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <script src="./assets/js/app.js"></script>
     <script src="./assets/js/IsNumber.js"></script>
-    <title>Document</title>
+    <title>US Federal Income Taxes Calculator</title>
 </head>
 <body onload="taxCalc()">
     <div class="container text-center d-flex flex-column border border-2 w-50 mt-3 shadow p-3 mb-5 bg-white rounded">
