--- a/j13-hw1/index.html
+++ b/j13-hw1/index.html
@@ -24,7 +24,8 @@
         <div class="alert alert-success w-75 mb-5 mx-auto" id="finalRateField" role="alert">
             Here you will see your final salary
           </div>
-          
+                    <a href="./test.html"></a>
+
     </div>
 </body>
 
