--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <img class="rounded-circle" width="250" src="./assets/img/stas.jpg" alt="stas picture">
         </div>
         
+        <p class="text-center">Hello!
+            My Name is Stanislav Tikhomirov an i'm a beginner FrontEnd developer (JavaScript).
+            Here's my projetcs. Hope you'll enjoy! 
+        </p>
         <br>
        
         <div class="text-center d-flex flex-row justify-content-between">
