--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         
         <p class="text-center">Hello!
-            My Name is Stanislav Tikhomirov an i'm a beginner FrontEnd developer (JavaScript).
+            My Name is Stanislav Tikhomirov and i'm a beginner FrontEnd developer (JavaScript).
             Here's my projetcs. Hope you'll enjoy! 
         </p>
         <br>
