--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
         <br>
        
-        <div class="text-center d-flex flex-row justify-content-between">
+        <div class="text-center d-flex flex-row justify-content-around">
 
             <div class="dropdown w-50">
                 <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
