--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="text-center">Welcome to my projects site</h1>
     
         <div class="pic">
-            <img class="rounded-circle" width="450" src="./assets/img/stas2.jpg" alt="stas picture">
+            <img width="450" src="./assets/img/stas2.jpg" alt="stas picture">
         </div>
         
         <p class="text-center">Hello!
