--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework2-2">Numbers to words (in russian (UAH))</a>
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework2-3">Credit Card Validator(Visa, MasterCard, AmEx, Diners)</a>
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework3">Ukraine INN(personal tax number) Validator</a>
-                  <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework3-2">Annuity Credit system (Chrome developer tools must be opened)</a>
+                  <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework3-2">Annuity Credit Calc</a>
                 </div>
               </div>
                           
