--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework2-3">Credit Card Validator(Visa, MasterCard, AmEx, Diners)</a>
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework3">Ukraine INN(personal tax number) Validator</a>
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework3-2">Annuity Credit Calc</a>
+                  <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework4">Currency Rates with country flags</a>
                 </div>
               </div>
                           
