--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework3">Ukraine INN(personal tax number) Validator</a>
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework3-2">Annuity Credit Calc</a>
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework4">Currency Rates with country flags</a>
+                  <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework5">Fake shop with sorting ability</a>
                 </div>
               </div>
                           
