--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework4">Currency Rates with country flags</a>
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework5">Fake shop with sorting ability</a>
                   <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework7">PrivatBank TSO map and addresses</a>
+                  <a class="dropdown-item" target="blank" href="https://stastikh.github.io/homework/js13-homework8">Ukrainian INN decoding</a>
                 </div>
               </div>
                           
