--- a/js13-homework9/index.html
+++ b/js13-homework9/index.html
@@ -17,7 +17,7 @@
         <div class="card-group" >
             <div class="card border border-1">
                 <div class="d-flex justify-content-between mt-2 p-2"> 
-                    <h4>{{title1}}</h4>
+                    <h4>{{title1ST}}</h4>
                 </div>
                 <div class="d-flex justify-content-between mt-2 p-2"> 
                     <input type="date" v-model='periodOne.dateStart'>
