--- a/pdrtst/index.html
+++ b/pdrtst/index.html
@@ -13,7 +13,7 @@
         <div class="text-center mt-3">
             <div id="header" class="card">    
                 <h1>Тест на пидора</h1>
-                <input id="nameField" placeholder="Введите имя"></input>
+                <-- <input id="nameField" placeholder="Введите имя"></input> -->
                 <button id="testP" onclick="pidorTest()">Проверить</button>
             </div>
             <div id="testField" class="card w-50 mx-auto mt-3" style="display: none;">
