--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="container">
 
-        <h1 class="text-center mb-1">Welcome to my projects site</h1>
+        <h1 class="text-center mb-1 mt-1">Welcome to my projects site</h1>
     
         <div class="pic">
             <img width="450" src="./assets/img/stas2.jpg" alt="stas picture">
