--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <img src="./assets/img/stas2.jpg" alt="stas picture">
         </div>
         
-        <p class="text-center">Hello!
+        <p class="text-center mt-2">Hello!
             My Name is Stanislav Tikhomirov and i'm a beginner FrontEnd developer (JavaScript).
             Here's my projetcs. Hope you'll enjoy! 
         </p>
        
-        <div class="text-center d-flex flex-row justify-content-around mb-3">
+        <div class="text-center d-flex flex-row justify-content-around mb-3 mt-2">
 
             <div class="dropdown w-50">
                 <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
