--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <h1 class="text-center mb-2 mt-2">Welcome to my projects site</h1>
     
-        <div class="picture d-flex justify-content-center">
+        <div class="pic">
             <img src="./assets/img/stas2.jpg" alt="stas picture">
         </div>
         
