--- a/ugbform/index.html
+++ b/ugbform/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="d-flex flex-column w-100 p-2">
         <!-- <div class="w-100"> -->
-            <img src="/header.jpg" alt="header image" class="m-auto w-100">
+            <img src="./header.jpg" alt="header image" class="m-auto w-100">
         <!-- </div> -->
         <div class="w-100 m-auto">
             <div class="form-floating mb-4 mt-5">
